--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Sportique With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://www.canva.com/design/DAGtCTVLi30/dRUcISeWNA4gxYAt6d3xqw/watch?utm_content=DAGtCTVLi30&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hef32b88491 alt="Sport Model" class="w-70 h-100">
+                <img src="https://bit.ly/GHANIYA alt="Sport Model" class="w-70 h-100">
             </div>
         </div>
     </div>
@@ -136,8 +136,20 @@
                     </a>
                 </div>
             </div>
-            
-<!-- Footer -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Load More Button -->
+    <div class="container mx-auto px-4 py-6 text-center">
+        <button class="bg-white border border-amber-600 text-amber-600 px-6 py-2 rounded-full font-medium hover:bg-amber-50 transition duration-300">
+            Butuh rekomendasi atau info detail produk? Kami siap bantu Kakak kapan pun 😊
+        </button>
+    </div>
+
+    <!-- Footer -->
     <footer class="bg-amber-600 text-white py-1 px-4">
     <footer class="premium-bg text-white py-8">
         <div class="container mx-auto px-4">
