--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Sportique With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://bit.ly/GHANIYA alt="Sport Model" class="w-70 h-100">
+                <img src="https://st3.depositphotos.com/3110937/16430/i/600/depositphotos_164302944-stock-photo-young-fitness-woman-healthy-and.jpg alt="Sport Model" class="w-70 h-100">
             </div>
         </div>
     </div>
@@ -156,11 +156,11 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0 text-center">
                     <h3 class="text-xl font-bold">
-                        BEAUTY HIJAB COLLECTION
+                        GHANIYA SPORTIQUE COLLECTION
                     </h3>
-                    <p class="text-white-200 mt-2">Hijab Premium Untuk Muslimah Modern</p>
+                    <p class="text-white-200 mt-2">Fashion Premium Untuk sportique Modern</p>
                 </div>
-                <p class="text-center text-white-200 text-sm">© 2025 Beauty Hijab. All rights reserved.</p>
+                <p class="text-center text-white-200 text-sm">© 2025 Beauty Sport. All rights reserved.</p>
             </div>
         </div>
     </footer>
