--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <header class="sticky top-0 z-50 bg-white shadow-sm">
         <div class="container mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center space-x-2">
-                <i class="fas fa-hijab text-2xl text-amber-700"></i>
-                <h1 class="text-xl font-bold text-amber-800">Ghaniya Collection</h1>
+                <i class="fas fa-hijab text-2xl text-teal-700"></i>
+                <h1 class="text-xl font-bold text-teal-800">Ghaniya Collection</h1>
             </div>
             <div class="flex items-center space-x-4">
                 <button class="text-gray-600">
@@ -59,11 +59,11 @@
     </header>
 
     <!-- Hero Banner -->
-    <div class="relative bg-gradient-to-r from-amber-100 to-amber-50 py-8 px-4">
+    <div class="relative bg-gradient-to-r from-teal-100 to-teal-50 py-8 px-4">
         <div class="container mx-auto flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-6 md:mb-0 text-center">
-                <h2 class="text-3xl font-bold text-amber-900 mb-2">New Collection 2025</h2>
-                <p class="text-amber-800 mb-4">Premium Quality Sportique With Modern Designs</p>
+                <h2 class="text-3xl font-bold text-teal-900 mb-2">New Collection 2025</h2>
+                <p class="text-teal-800 mb-4">Premium Quality Sportique With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <img src="https://st3.depositphotos.com/3110937/16430/i/600/depositphotos_164302944-stock-photo-young-fitness-woman-healthy-and.jpg alt="Sport Model" class="w-70 h-100">
@@ -82,12 +82,12 @@
             <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
                 <div class="relative">
                     <img src="https://down-id.img.susercontent.com/file/id-11134207-7rasm-m55myfs2wvpeee.webp" alt="Sport 1" class="w-full h-48 object-cover product-image">
-                    <div class="absolute top-2 right-2 bg-amber-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                    <div class="absolute top-2 right-2 bg-teal-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
                 </div>
                 <div class="p-3">
                     <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Yoga Skirtpants</h4>
                     <div class="flex items-center mb-1">
-                        <div class="flex text-amber-400">
+                        <div class="flex text-teal-400">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -97,12 +97,12 @@
                         <span class="text-xs text-gray-500 ml-1">(128)</span>
                     </div>
                     <div class="flex items-center justify-between mb-2">
-                        <span class="text-amber-700 font-bold">Rp 169,000</span>
-                        <button class="text-amber-700">
+                        <span class="text-teal-700 font-bold">Rp 169,000</span>
+                        <button class="text-teal-700">
                             <i class="fas fa-heart"></i>
                         </button>
                     </div>
-                    <a href="https://tara.orderonline.id/yoga-skirtpants" class="block w-full bg-amber-700 hover:bg-amber-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                    <a href="https://tara.orderonline.id/yoga-skirtpants" class="block w-full bg-teal-700 hover:bg-teal-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
                         Belanja Sekarang
                     </a>
                 </div>
@@ -116,7 +116,7 @@
                 <div class="p-3">
                     <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Yoga Socks Silicone</h4>
                     <div class="flex items-center mb-1">
-                        <div class="flex text-amber-400">
+                        <div class="flex text-teal-400">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -126,12 +126,12 @@
                         <span class="text-xs text-gray-500 ml-1">(95)</span>
                     </div>
                     <div class="flex items-center justify-between mb-2">
-                        <span class="text-amber-700 font-bold">Rp 145,000</span>
+                        <span class="text-teal-700 font-bold">Rp 145,000</span>
                         <button class="text-gray-400">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>
-                    <a href="https://tara.orderonline.id/yoga-socks-silicone" class="block w-full bg-amber-700 hover:bg-amber-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                    <a href="https://tara.orderonline.id/yoga-socks-silicone" class="block w-full bg-teal-700 hover:bg-teal-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
                         Belanja Sekarang
                     </a>
                 </div>
@@ -144,13 +144,13 @@
 
     <!-- Load More Button -->
     <div class="container mx-auto px-4 py-6 text-center">
-        <button class="bg-white border border-amber-600 text-amber-600 px-6 py-2 rounded-full font-medium hover:bg-amber-50 transition duration-300">
+        <button class="bg-white border border-teal-600 text-teal-600 px-6 py-2 rounded-full font-medium hover:bg-teal-50 transition duration-300">
             Butuh rekomendasi atau info detail produk? Kami siap bantu Kakak kapan pun 😊
         </button>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-amber-600 text-white py-1 px-4">
+    <footer class="bg-teal-600 text-white py-1 px-4">
     <footer class="premium-bg text-white py-8">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
