--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </button>
                     </div>
                     <a href="https://tara.orderonline.id/yoga-skirtpants" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
-                        Belanja Sekarang
+                        AMBIL PROMO
                     </a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                         <span class="text-xs text-gray-500 ml-1">(598)</span>
                     </div>
@@ -135,13 +135,257 @@
                         </button>
                     </div>
                     <a href="https://tara.orderonline.id/yoga-socks-silicone" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
-                        Belanja Sekarang
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 3 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://down-id.img.susercontent.com/file/id-11134207-7rasb-m0hsvz3br0qm09.webp" alt="Crop Sports Jacket" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-pink-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Crop Sports Jacket</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(378)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 172,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://tara.orderonline.id/crop-sports-jacket" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://down-id.img.susercontent.com/file/id-11134207-7r992-ly1rhljhanqk6c.webp" alt="INDIAN CROPTOP" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">INDIAN CROPTOP</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(378)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 175,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://indiancroptop.ghaniya.web.id/" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 5 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://image.made-in-china.com/202f0j00JrcbSjLnKwkZ/Cute-Pink-Athletic-Pleated-Tennis-Skirts-for-Women-with-Built-in-Shorts-Side-Pockets-Back-Zipper-Pocket-Mini-Golf-Skorts-Running-Casual-Workout-Activewear.webp" alt="Tennis Skirt" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Tennis Skirt</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(598)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 179,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://tara.orderonline.id/tennis-skirt" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 6 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://i.ebayimg.com/images/g/UCsAAeSwvJFn84A-/s-l500.jpg" alt="Rashguard" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-pink-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Rashguard</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(395)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 185,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://rashguard.ghaniya.web.id/" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 7 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://m.media-amazon.com/images/I/71WMIhT1JxL._AC_UF350,350_QL80_.jpg" alt="GelSocks" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-pink-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">GelSocks</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(267)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 150,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://gelsocks.ghaniya.web.id/" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 8 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://img.ltwebstatic.com/images3_spmp/2023/12/02/fb/170151171713cad3183e48ac284993d53c49be2a6a_thumbnail_405x552.jpg" alt="SportGlove" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-pink-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">SportGlove</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(348)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 190,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://sportglove.ghaniya.web.id/" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 9 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://m.media-amazon.com/images/I/61VZ84qRr+L._AC_SX425_.jpg" alt="Sports Waist Pack" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Sports Waist Pack</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(468)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 165,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://tara.orderonline.id/sports-waist-pack" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 10 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://m.media-amazon.com/images/I/31UUjO14N9L._UF350,350_QL80_.jpg" alt="ANKLE PROTECTION SLEEVE" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">ANKLE PROTECTION SLEEVE</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(634)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 149,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://tara.orderonline.id/ankle-protection-sleeve" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
                     </a>
                 </div>
             </div>
         </div>
     </div>
-
+            
     <!-- Load More Button -->
     <div class="container mx-auto px-4 py-6 text-center">
         <button class="bg-white border border-indigo-600 text-indigo-600 px-6 py-2 rounded-full font-medium hover:bg-indigo-50 transition duration-300">
