--- a/index.html
+++ b/index.html
@@ -380,6 +380,66 @@
                 </div>
             </div>
 
+            <!-- Product 11 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://cdn.orderonline.id/uploads/images_8823311749229515626.jpg" alt="Summer Sun Mask" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Summer Sun Mask</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(734)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 149,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://tara.orderonline.id/summer-sun-mask" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 12 -->
+            <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img loading="lazy" src="https://cdn.orderonline.id/uploads/images_9144861752600406770.png" alt="3in1 Croptop Sporty" class="w-full h-48 object-cover product-image" />
+                    <div class="absolute top-2 right-2 bg-pink-600 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">3in1 Croptop Sporty</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-yellow-500">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(448)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-indigo-700 font-bold">Rp 175,000</span>
+                        <button class="text-indigo-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://3in1-croptop-sporty.ghaniya.web.id/" class="block w-full bg-indigo-700 hover:bg-indigo-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        AMBIL PROMO
+                    </a>
+                </div>
+            </div>
+
                     </a>
                 </div>
             </div>
